--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-cli": "^6.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
+    "commonjs": "0.0.1",
     "compression": "^1.7.2",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
@@ -27,6 +32,7 @@
   "description": "Web application nodejs with express",
   "main": "app.js",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
